To do: Shopping Cart, Navbar dropdown, Jquery which changes the pools' dimensions to another paragraph, and product details

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -29,6 +29,9 @@ CSS responsive breakpoints' media queries  */
         color:red;
         font-size: 80px;
     }
+    .logopoolmex{
+        text-align:left;
+    }
 }
 
 /* Medium */
@@ -40,6 +43,9 @@ CSS responsive breakpoints' media queries  */
         color:red;
         font-size: 45px;
     }
+    .logopoolmex{
+        margin-left: 45%;
+    }
 }
 
 /* Small */
@@ -47,12 +53,18 @@ CSS responsive breakpoints' media queries  */
     .responsiveVideo{
         height:100%;
     }
+    .logopoolmex{
+        margin-left: 40%;
+    }
 }
 
 /* Extra Small */
 @media only screen and (max-width: 575px) {
     .responsiveVideo{
         height:100%;
+    }
+    .logopoolmex{
+        margin-left: 37%;
     }
 }
 
