--- a/sections/small-banner.liquid
+++ b/sections/small-banner.liquid
@@ -27,7 +27,7 @@
       }
     ],
     "presets": [{
-        "name": "Rich text",
+        "name": "Small Banner",
         "category": "Text"
     }]
   }
