--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -83,10 +83,9 @@
     {% section 'header' %}
     
     <!-- Index's Dynamic UI Content, to modify, head to shopify's customization of your store and edit it from the web app -->
-    <main style="margin-top:120px;">
-      <div class="container">
+    <main style="margin-top:60px;">
+        <!-- Note to self: you must define a container at the beginning of each section since there is none used here -->
         {{ content_for_layout }}
-      </div>
     </main>
 
     <!-- Bootstrap Footer with social media icons -->
