To do: Shopping Cart, Navbar dropdown, Jquery which changes the pools dimensions to another paragraph

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -18,6 +18,9 @@ CSS responsive breakpoints' media queries  */
         color:red;
         font-size: 80px;
     }
+    .correccionbtn{
+        margin-top:0px;
+    }
 }
 
 /* Large */
@@ -31,6 +34,9 @@ CSS responsive breakpoints' media queries  */
     }
     .logopoolmex{
         text-align:left;
+    }
+    .correccionbtn{
+        margin-top:0px;
     }
 }
 
@@ -46,6 +52,9 @@ CSS responsive breakpoints' media queries  */
     .logopoolmex{
         margin-left: 45%;
     }
+    .correccionbtn{
+        margin-top:35px;
+    }
 }
 
 /* Small */
@@ -56,6 +65,9 @@ CSS responsive breakpoints' media queries  */
     .logopoolmex{
         margin-left: 40%;
     }
+    .correccionbtn{
+        margin-top:35px;
+    }
 }
 
 /* Extra Small */
@@ -65,6 +77,9 @@ CSS responsive breakpoints' media queries  */
     }
     .logopoolmex{
         margin-left: 37%;
+    }
+    .correccionbtn{
+        margin-top:35px;
     }
 }
 
@@ -96,8 +111,39 @@ Image Background Cover CSS                                 */
 }
 
 /*--------------------------------------------------------------
-CSS Automatic and Perfect Scrolling */
+CSS Automatic and Perfect Scrolling                             */
 
 html {
     scroll-behavior: smooth;
+}
+
+
+/*--------------------------------------------------------------
+Hover/Unhover Animations                                        */
+
+.facebookhover:hover {
+    color:#076bce;
+    transition-duration: .25s;
+}
+.facebookhover {
+    color:inherit;
+    transition-duration: .7s;
+}
+
+.twitterhover:hover {
+    color:#1CA0F1;
+    transition-duration: .25s;
+}
+.twitterhover {
+    color:inherit;
+    transition-duration: .7s;
+}
+
+.pinteresthover:hover {
+    color:#CE2127;
+    transition-duration: .25s;
+}
+.pinteresthover {
+    color:inherit;
+    transition-duration: .7s;
 }
