--- a/sections/product.liquid
+++ b/sections/product.liquid
@@ -4,7 +4,7 @@
     <div class="row">
 
         <!-- Start: Pretty Carousel Fade + TouchSwipe -->
-        <div class="col-md-6">
+        <div class="col-md-6" style="margin-top: 40px;">
           {%- assign current_variant = product.selected_or_first_available_variant -%}
           {%- assign featured_image = current_variant.featured_image | default: product.featured_image -%}
           
@@ -60,23 +60,27 @@
         <!-- End: Pretty Carousel Fade + TouchSwipe -->
 
         <!-- Start: Product's Information/Content -->
-        <div class="col-md-6">
+        <div class="col-md-6" style="margin-top: 40px;">
             
             <!-- Title -->
             <h1>{{ product.title }}</h1>
            
             <!-- Price Comparison -->
-            <div data-price-wrapper class="my-2 text-left">
+            <div data-price-wrapper class="my-2 text-left" style="padding-top: 10px;">
               
                 <!-- Current Price -->
-                <span data-product-price>
+                <p data-product-price class="float-left">
                   {{ current_variant.price | money }}
-                </span>
+                </p>
           
                 <!-- Strikethrough Price -->
                 {% if product.compare_at_price_max > product.price %}
-                  <p class="float:right;">
+                  <p class="float-right">
+
+                    <!-- Precio habitual -->
                     <span class="visually-hidden" data-compare-text>{{ 'products.product.regular_price' | t }}</span>
+                    
+                    <!-- Original non-discount price -->
                     <s data-compare-price>
                       {% if current_variant.compare_at_price > current_variant.price %}
                         {{ current_variant.compare_at_price | money }}
@@ -85,18 +89,21 @@
                   </p>
                 {% endif %}
             </div>
-                   
-          
+             
+            <!-- Snippet in case you have product variants -->
             {% include 'product-form' %}
             
             <!-- Description -->
-            <div class="rte">
+            <div class="rte" style="padding-top: 10px;">
               {{ product.description }}
             </div>
-          
+            
+            <br/>
+            
             {% if section.settings.show_share_buttons %}
               {% include 'social-sharing', share_title: product.title, share_permalink: product.url, share_image: product %}
             {% endif %}
+            
         </div> <!-- / col -->
     </div> <!-- / row -->
   </div>
