--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -1,15 +1,25 @@
 {% form 'product', product, data-product-form: '', data-product-handle: product.handle, data-enable-history-state: 'true' %}
 
-  <select name="id" v-model="form.id" id="variant_id"  class="form-control">
+  <!-- A select that dynamically gets all of the variants of the current product >
+  <select name="id" v-model="form.id" id="variant_id" class="form-control" style="margin-top:60px; margin-bottom:20px;">
     {% for variant in product.variants %}
       <option
-        {% if variant == current_variant %}selected="selected"{% endif %}
-        {% unless variant.available %}disabled="disabled"{% endunless %}
+        {% if variant == current_variant %}
+        selected="selected"
+        {% endif %}
+
+        {% unless variant.available %}
+        disabled="disabled"
+        {% endunless %}
+
         value="{{ variant.id }}">
           {{ variant.title }}
       </option>
     {% endfor %}
-  </select>
+  </select-->
+
+  <!-- You might want to erase these br's if you uncomment the product variations' select above -->
+  <br/><br/>
 
 <noscript>
   <select name="id">
@@ -30,7 +40,7 @@
           <label for="Quantity" class="form-label">{{ 'products.product.quantity' | t }}</label>
           <input type="number" v-model="form.quantity" class="form-control" id="Quantity" name="quantity" value="1" min="1">
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 text-center correccionbtn">
           <button
             type="button"
             @click="addToCart"
@@ -49,7 +59,6 @@
 
       </div>
     </div>
-    
 
 </div>
 {% endform %}
