--- a/snippets/social-sharing.liquid
+++ b/snippets/social-sharing.liquid
@@ -1,27 +1,30 @@
 <!-- /snippets/social-sharing.liquid -->
-<div class="social-sharing">
+<div class="social-sharing text-center">
+  <h3 style="padding-bottom: 10px;">
+    Compartir
+  </h3>
 
   {% if settings.share_facebook %}
-    <a target="_blank" href="//www.facebook.com/sharer.php?u={{ shop.url | append: share_permalink }}">
+    <a target="_blank" href="//www.facebook.com/sharer.php?u={{ shop.url | append: share_permalink }}" class="anone facebookhover" style="font-size: 24px;">
       {% include 'icon-facebook' %}
-      <span aria-hidden="true">{{ 'general.social.share_on_facebook' | t }}</span>
-      <span class="visually-hidden">{{ 'general.social.alt_text.share_on_facebook' | t }}</span>
+      <!--span aria-hidden="true">{{ 'general.social.share_on_facebook' | t }}</span>
+      <span class="visually-hidden">{{ 'general.social.alt_text.share_on_facebook' | t }}</span-->
     </a>
   {% endif %}
 
   {% if settings.share_twitter %}
-    <a target="_blank" href="//twitter.com/share?text={{ share_title | url_param_escape }}&amp;url={{ shop.url | append: share_permalink }}">
+    <a target="_blank" href="//twitter.com/share?text={{ share_title | url_param_escape }}&amp;url={{ shop.url | append: share_permalink }}" class="anone twitterhover" style="font-size: 24px; margin-left: 15px; margin-right: 15px; ">
       {% include 'icon-twitter' %}
-      <span aria-hidden="true">{{ 'general.social.share_on_twitter' | t }}</span>
-      <span class="visually-hidden">{{ 'general.social.alt_text.share_on_twitter' | t }}</span>
+      <!--span aria-hidden="true">{{ 'general.social.share_on_twitter' | t }}</span>
+      <span class="visually-hidden">{{ 'general.social.alt_text.share_on_twitter' | t }}</span-->
     </a>
   {% endif %}
 
   {% if settings.share_pinterest %}
-    <a target="_blank" href="//pinterest.com/pin/create/button/?url={{ shop.url | append: share_permalink }}&amp;media={{ share_image | img_url: '1024x1024' }}&amp;description={{ share_title | url_param_escape }}">
+    <a target="_blank" href="//pinterest.com/pin/create/button/?url={{ shop.url | append: share_permalink }}&amp;media={{ share_image | img_url: '1024x1024' }}&amp;description={{ share_title | url_param_escape }}" class="anone pinteresthover" style="font-size: 24px;">
       {% include 'icon-pinterest' %}
-      <span aria-hidden="true">{{ 'general.social.share_on_pinterest' | t }}</span>
-      <span class="visually-hidden">{{ 'general.social.alt_text.share_on_pinterest' | t }}</span>
+      <!--span aria-hidden="true">{{ 'general.social.share_on_pinterest' | t }}</span>
+      <span class="visually-hidden">{{ 'general.social.alt_text.share_on_pinterest' | t }}</span-->
     </a>
   {% endif %}
 
