Navbar and collections finished. To Do: Shopping Cart and Jquery that changes the dimensions' place

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -125,6 +125,10 @@ Hover/Unhover Animations                                        */
     color:#076bce;
     transition-duration: .25s;
 }
+.facebookhover:active {
+    color:#076bce;
+    transition-duration: .25s;
+}
 .facebookhover {
     color:inherit;
     transition-duration: .7s;
@@ -134,12 +138,20 @@ Hover/Unhover Animations                                        */
     color:#1CA0F1;
     transition-duration: .25s;
 }
+.twitterhover:active {
+    color:#1CA0F1;
+    transition-duration: .25s;
+}
 .twitterhover {
     color:inherit;
     transition-duration: .7s;
 }
 
 .pinteresthover:hover {
+    color:#CE2127;
+    transition-duration: .25s;
+}
+.pinteresthover:active {
     color:#CE2127;
     transition-duration: .25s;
 }
