--- a/snippets/product-price.liquid
+++ b/snippets/product-price.liquid
@@ -45,7 +45,7 @@
   </p>
   {% endif %}
 
-  <!-- "Sold out" Text -->
+  <!-- "Sold out" Red Text -->
   {% unless product.available %}
   <br/><br/>
   <p class="text-danger float-right">
