--- a/snippets/responsive-image.liquid
+++ b/snippets/responsive-image.liquid
@@ -70,10 +70,10 @@
 {%- assign image_widths = image_widths | strip -%}
 
 <div id="ImageWrapper-{{ image.id }}-{{ responsive_image_counter }}" data-image-id="{{ image.id }}" class="responsive-image__wrapper {{ wrapper_class }}" {{ wrapper_attributes }}>
-  <img id="Image-{{ image.id }}-{{ responsive_image_counter }}"
-    class="responsive-image__image lazyload {{ image_class }}"
+  <img id="Image-{{ image.id }}-{{ responsive_image_counter }}" style="margin-bottom:15px;"
+    class="responsive-image__image lazyload {{ image_class }} img-fluid d-block mx-auto"
     src="{{ image | img_url: '300x' }}"
-    data-src="{{ img_url }}"
+    data-src="{{ img_url | img_url:'500x500', crop:'center' }} }}"
     data-widths="[{{ image_widths }}]"
     data-aspectratio="{{ image.aspect_ratio }}"
     data-sizes="auto"
@@ -81,6 +81,7 @@
     alt="{{ image.alt | escape }}"
     {{ image_attributes }}
   >
+
 </div>
 
 <noscript>
