Corrected design details. To Do: Shopping Cart and Jquery that changes the dimensions' place

--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -34,7 +34,7 @@
           
           <!-- Collection Title -->
           <div class="product-name text-center" style="color: rgb(0,0,0); margin-top: 25px;" class="anone">
-            <a href="{{ collection.url | default: "#" }}">
+            <a href="{{ collection.url | default: "#" }}" class="anone text-primary">
               {{ collection.title | default: default_label }}
             </a>
           </div>
