--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -43,7 +43,7 @@ Theme Store optional settings
 
                   <!-- Product Title -->
                   <div class="product-name text-center" style="color: rgb(0,0,0);" class="anone">
-                    <a href="{{ product.url | within: collection }}">
+                    <a href="{{ product.url | within: collection }}" class="anone text-primary">
                       {{ product.title | escape }}
                     </a>
                   </div>
