To Do: Add Products to Cart and Jquery that changes the dimensions paragraph

--- a/snippets/navbar.liquid
+++ b/snippets/navbar.liquid
@@ -46,11 +46,18 @@
             {% endfor %}
 
             <!-- Shopping Cart -->
-            <li class="nav-item" role="presentation">
-              <a class="nav-link" href="{{ routes.cart_url }}">
-                <i class="fas fa-shopping-cart" style="color: rgba(24,169,231,0.9);"></i>
-              </a>
-            </li>
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown mini-cart">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: rgba(24,169,231,0.9);">
+                  <i class="fas fa-shopping-cart"></i>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-item-text">
+                        {% include 'mini-cart' %}
+                    </div>
+                </div>
+              </li>
+            </ul>
           </ul>
 
         </div>
