--- a/sections/unmodifiable-footer.liquid
+++ b/sections/unmodifiable-footer.liquid
@@ -4,11 +4,10 @@
       <div class="row">
 
         <!-- Services -->
-        <div class="col-sm-3 col-md-3 item" data-aos="fade" data-aos-duration="700" data-aos-delay="200"
+        <div class="col-sm-3 col-md-3 item offset-sm-3 offset-md-0" data-aos="fade" data-aos-duration="700" data-aos-delay="200"
           data-aos-once="true">
           <h3 style="margin-top: 15px;color: rgb(0,0,0);">Acerca de</h3>
           <ul>
-            <li><a href="#Privacy" style="color: rgb(28,28,28);" data-toggle="modal">Privacidad</a></li>
             <li><a href="contact.html" style="color: rgb(28,28,28);">Contacto</a></li>
             <li><a href="#FAQ" style="color: rgb(28,28,28);" data-toggle="modal">Preguentas Frecuentes</a></li>
           </ul>
@@ -17,9 +16,10 @@
         <!-- Page Links -->
         <div class="col-sm-3 col-md-3 item" data-aos="fade" data-aos-duration="700" data-aos-delay="200"
           data-aos-once="true">
-          <h3 style="margin-top: 15px;color: rgb(0,0,0);">Acerca de</h3>
+          <h3 style="margin-top: 15px;color: rgb(0,0,0);">Políticas</h3>
           <ul>
             <li><a href="#Privacy" style="color: rgb(28,28,28);" data-toggle="modal">Privacidad</a></li>
+            <li><a href="#Terms" style="color: rgb(28,28,28);" data-toggle="modal">Términos y Condiciones</a></li>
           </ul>
         </div>
 
