--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -97,9 +97,8 @@
           <!-- Product Image -->
           {% if product.featured_image != blank %}
           <a href="{{ product.url | within: collection }}">
-            <img src={{ product.featured_image | img_url:'300x'}}
-              data-src="{{ product.featured_image | img_url:'500x500', crop:'center' }}"
-              alt="{{ product.featured_image.alt }}" class="img-fluid lazyload d-block mx-auto" style="margin-bottom:30px">
+            <img class="img-fluid d-block mx-auto" src="{{ product.featured_image | img_url: '1160x' }}" alt="{{ product.featured_image.alt | escape }} 
+            data-src="{{ product.featured_image | img_url:'500x500', crop:'center' }}" alt="{{ product.featured_image.alt }}" class="img-fluid lazyload d-block mx-auto" style="margin-bottom:30px">
           </a>
           {% endif %}
 
