--- a/snippets/mini-cart.liquid
+++ b/snippets/mini-cart.liquid
@@ -49,7 +49,7 @@
   </template>
 
   <li class="text-center">
-      <a href="/cart" class="btn btn-primary">
+      <a href="/cart" class="btn btn-primary" style="margin-top:15px;">
         Carrito
       </a>
       
