--- a/snippets/modals.liquid
+++ b/snippets/modals.liquid
@@ -53,3 +53,30 @@
         </div>
     </div>
 </div>
+
+<!-- Terms & Conditions Modal -->
+<div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="Privacy">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 mx-auto">
+                            <div class="modal-body">
+                                <h2 class="text-uppercase">Términos y Condiciones</h2>
+                                <p class="item-intro text-muted">Poolmex asegura</p>
+                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
+                                    adipisicing elit. Est
+                                    blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi
+                                    sunt officia
+                                    expedita beatae
+                                    cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p><br/>
+                                    <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fa fa-check"></i><span> Lo comprendo</span></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
