--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -1,25 +1,16 @@
 {% form 'product', product, data-product-form: '', data-product-handle: product.handle, data-enable-history-state: 'true' %}
 
-  <!-- A select that dynamically gets all of the variants of the current product >
-  <select name="id" v-model="form.id" id="variant_id" class="form-control" style="margin-top:60px; margin-bottom:20px;">
+  <!-- A Select with the product's variants -->
+  <select name="id" v-model="form.id" id="variant_id"  class="form-control">
     {% for variant in product.variants %}
       <option
-        {% if variant == current_variant %}
-        selected="selected"
-        {% endif %}
-
-        {% unless variant.available %}
-        disabled="disabled"
-        {% endunless %}
-
+        {% if variant == current_variant %}selected="selected"{% endif %}
+        {% unless variant.available %}disabled="disabled"{% endunless %}
         value="{{ variant.id }}">
           {{ variant.title }}
       </option>
     {% endfor %}
-  </select-->
-
-  <!-- You might want to erase these br's if you uncomment the product variations' select above -->
-  <br/><br/>
+  </select>
 
 <noscript>
   <select name="id">
@@ -36,11 +27,11 @@
 
 <div class="form-group">
     <div class="row align-items-end">
-      <div class="col-md-6">
+      <div class="col-md-6" style="margin-top:15px;">
           <label for="Quantity" class="form-label">{{ 'products.product.quantity' | t }}</label>
           <input type="number" v-model="form.quantity" class="form-control" id="Quantity" name="quantity" value="1" min="1">
       </div>
-      <div class="col-md-6 text-center correccionbtn">
+      <div class="col-md-6">
           <button
             type="button"
             @click="addToCart"
@@ -59,6 +50,7 @@
 
       </div>
     </div>
+    
 
 </div>
 {% endform %}
