--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -65,8 +65,7 @@
               <a href="{{ collection.url }}" title="{{ 'collections.general.link_title' | t: title: title }}">
                 
                 {% if collection.image != blank or collection.products.first != blank %}
-                  {%- assign image_object = collection.image | default: collection.products.first.featured_image -%}
-                  {% include 'responsive-image' with image: image_object, max_width: 480, max_height: 480 %}
+                  <img class="img-fluid d-block mx-auto" src="{{ collection.products.first.featured_image | img_url: '1160x' }}" alt="{{ product.featured_image.alt | escape }}">
 
                 {% else %}
                   {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
